# Bifrost

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  build.Dockerfile  compose.yaml  docker-compose.yml  openapi.yaml
.github/workflows/: build.yml
src/: main.rs
src/crypto/: mod.rs
src/routes/: auth.rs  secret.rs  token.rs
src/utils/: db.rs  jwt.rs  mod.rs
