[package]
name = "bifrost"
version = "0.3.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
anyhow = "1.0.79"
chrono = "0.4.40"
dotenv = "0.15.0"
env_logger = "0.11.6"
hex = "0.4.3"
ring = "0.17.7"
rusqlite = "0.33.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.140"
