[package]
name = "bifrost"
version = "0.3.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
anyhow = "1.0.79"
chrono = "0.4.40"
dotenv = "0.15.0"
hex = "0.4.3"
ring = "0.17.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls" , "postgres"] }